syntax = "proto3";

package prisel;

message PlayerInfo {
  string name = 1;
  string id = 2;
}